@@ -6,6 +6,7 @@ Version 1.4:
 0x/xx/200x
 
     - Api compatibility changes.
+    - Search in Directory context menu option.
 
 Version 1.3:
 
